--- a/configurations/TOI-4504_sim_for_mcmc.ini
+++ b/configurations/TOI-4504_sim_for_mcmc.ini
@@ -22,11 +22,11 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/TOI-4504_sim_for_mcmc001.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = xxx                # You can use this comment for example as diagram title in your result plots
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+comment = max_likelihood aus X023  # You can use this comment for example as diagram title in your result plots
+verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -45,7 +45,7 @@ dt = 10000                   # [s] <float> real time difference between simulati
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460882]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [10000]              # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [10000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -55,7 +55,7 @@ dts =    [10000]              # [s] <float> real time differences between simula
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
-;sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
+sim_flux_file = ../data/simulations/sim_for_mcmc001.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -72,7 +72,6 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_first_last_only.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
@@ -82,14 +81,14 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 200                 # Number of mcmc chains
-burn_in = 1000                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 22                 # Number of mcmc chains
+burn_in = 1                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 250              # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 1              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -102,8 +101,8 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+video_file = ../animations/TOI-4504_sim_for_mcmc.mp4  # <string> the resulting video is saved in this file
+frames = 15                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -168,27 +167,28 @@ ma =        303.6,            #  301.25,           306.25,            1
 body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
-#           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
-radius =    1.012 * r_jup,    #  0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.0,              0.15,              0.035
-i =         88.8,             #  86.5,             89.5,              0.5
-P =         40.986 * day,       39.7 * day,       41.7 * day,        0.4 * day
-Omega =     0,                  -15,              15,                8
-omega =     93.5,               75,               135,               20
-ma =        280,                180,              359.99,               20
-    
-    
-[TOI-4504c]    
-body_type = planet    
-primary =   TOI-4504    
-color =     0.99, 0.99, 0.01    
-#           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
-radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.10,              0.025
-i =         89.69,            #  89.25,            90.0,              0.15
-P =         82.5438 * day,      82 * day,         83.7 * day,        0.2 * day
-Omega =     0.8,              #  -15,              15,                3
-omega =     270.9,              180,              359.99,            20
-ma =        173.1,              0,                359.99,            20
+#           value                   lower bound       upper bound        sigma
+mass =      1.092289233 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
+radius =    1.012 * r_jup,         #  0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
+e =         0.09678228,              0.0,              0.15,              0.035
+i =         89.31542947,           #  86.5,             89.5,              0.5
+P =         40.99192343 * day,      39.7 * day,       41.7 * day,        0.4 * day
+Omega =     -0.394695707,           -15,              15,                8
+omega =     89.84592571,            75,               135,               20
+ma =        309.8531469,            180,              359.99,               20
+
+
+[TOI-4504c]
+body_type = planet
+primary =   TOI-4504
+color =     0.99, 0.99, 0.01
+#           value                   lower bound       upper bound        sigma
+mass =      3.703002875 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
+radius =    0.9897 * r_jup,        #  0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
+e =         0.059114337,             0.0,              0.10,              0.025
+i =         89.95832464,           #  89.25,            90.0,              0.15
+P =         83.16352469 * day,       82 * day,         83.7 * day,        0.2 * day
+Omega =     0.8,                   #  -15,              15,                3
+omega =     292.8980329,             180,              359.99,            20
+ma =        155.1396226,             0,                359.99,            20
+
