--- a/configurations/TOI-4504_sim_for_mcmc.ini
+++ b/configurations/TOI-4504_sim_for_mcmc.ini
@@ -22,7 +22,7 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_sim_for_mcmc001.json  # <string> simulation results like transit times are saved in this file
+;result_file = ../results/TOI-4504_sim_for_mcmc001.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = max_likelihood aus X023  # You can use this comment for example as diagram title in your result plots
@@ -45,6 +45,9 @@ dt = 10000                   # [s] <float> real time difference between simulati
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460882]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;starts = [2458400, 2458447]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458403, 2458450]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;ends =   [2460882]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 dts =    [10000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
@@ -55,7 +58,7 @@ dts =    [10000]             # [s] <float> real time differences between simulat
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
-sim_flux_file = ../data/simulations/sim_for_mcmc001.csv # <string> When this parameter is provided, the simulated flux will be saved.
+;sim_flux_file = ../data/simulations/sim_for_mcmc001.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -102,15 +105,15 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
 video_file = ../animations/TOI-4504_sim_for_mcmc.mp4  # <string> the resulting video is saved in this file
-frames = 15                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 5                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
-fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
+fps = 25                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
 
 [Scale]                      # This section controls the size of objects in the animation.
 scope_left = 0.4 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
                              # Middle of window is (0.0, 0.0)
-scope_right = 0.4 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right].
+scope_right = 0.02 * au       # [m] <float> scope of right plotting window is [-scope_right, scope_right].
                              # Middle of window is (0.0, 0.0)
 autoscaling = on             # <string> allowed values: on, off
 star_scale_left = 100.0      # [1] <float> (if autoscale off) animate stars with StarScale_left times
