--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -72,8 +72,8 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_first_last_only.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI-4504c, TOI-4504d  # only primary transits by these bodies are relevant when fitting for TT
@@ -137,7 +137,7 @@ red_dot_height = 1/20        # <float> height of red dot in light curve plot rel
 red_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
 
 
-[TOI-4504]
+[TOI4504]
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
@@ -149,7 +149,7 @@ limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
-[TOI-4504b]
+[TOI4504b]
 #           value               lower bound       upper bound        sigma
 body_type = planet
 primary =   TOI-4504
@@ -164,7 +164,7 @@ omega =     90
 ma =        303.6,            #  301.25,           306.25,            1
 
 
-[TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
+[TOI4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
 body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
@@ -180,7 +180,7 @@ omega =     93.5,               75,               135,               20
 ma =        280,                180,              359.99,               20
     
     
-[TOI-4504c]    
+[TOI4504c]
 body_type = planet    
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
