--- a/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
+++ b/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
@@ -26,7 +26,7 @@ result_file = ../results/TOI-4504_X024_maxl.json  # <string> simulation results 
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = X024               # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -72,11 +72,11 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/TOI-4504/tt_first_last_only.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
-eclipsers = TOI-4504c, TOI-4504d  # only primary transits by these bodies are relevant when fitting for TT
-eclipsees = TOI-4504              # only transits eclipsing these bodies are relevant when fitting for TT
+eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
+eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
 target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
                      # times without searching for the precise transit times in the simulated flux
 
@@ -136,7 +136,7 @@ red_dot_height = 1/20        # <float> height of red dot in light curve plot rel
 red_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
 
 
-[TOI-4504]
+[TOI4504]
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
@@ -148,7 +148,7 @@ limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
-[TOI-4504b]
+[TOI4504b]
 body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.01, 0.01
@@ -162,29 +162,29 @@ omega =     90
 ma =        303.6
 
 
-[TOI-4504d]
+[TOI4504d]
 body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
-mass =      1.306938619229288 * m_jup
-radius =    1.012 * r_jup
-e =         0.10527976401695996
-i =         88.8
-P =         41.16768686103386 * day
-Omega =     4.9620750482336655
-omega =     87.12992034721043
-ma =        329.9695998776485
-    
-    
-[TOI-4504c]    
-body_type = planet    
-primary =   TOI-4504    
+mass =      1.306938619229288 * m_jup,    1.2 * m_jup,      1.4 * m_jup,           1
+radius =    1.012 * r_jup,              #
+e =         0.10527976401695996,          0.08,             0.11,                  1
+i =         88.8,                       #
+P =         41.16768686103386 * day,      41.1 * day,       41.25 * day,           1
+Omega =     4.9620750482336655,            0,               6,                     1
+omega =     87.12992034721043,            85,               89,                    1
+ma =        329.9695998776485,           328,               330,                   1
+
+
+[TOI4504c]
+body_type = planet
+primary =   TOI-4504
 color =     0.99, 0.99, 0.01
-mass =      3.5913902107546636 * m_jup
-radius =    0.9897 * r_jup
-e =         0.051523476358734575
-i =         89.69
-P =         83.28376891641055 * day
-Omega =     0.8
-omega =     296.08745527524496
-ma =        150.0142378614026
+mass =      3.5913902107546636 * m_jup,  3.3 * m_jup,       3.8 * m_jup,           1
+radius =    0.9897 * r_jup,             #
+e =         0.051523476358734575,        0.048,             0.058,                 1
+i =         89.69,                      #
+P =         83.28376891641055 * day,     82.7 * day,        83.6 * day,            1
+Omega =     0.8,                        #
+omega =     296.08745527524496,          294,               310,                   1
+ma =        150.0142378614026,           135,               156,                   1
