--- a/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
+++ b/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
@@ -22,16 +22,16 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_X024_maxl.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt50000.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = X024               # You can use this comment for example as diagram title in your result plots
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 6000                    # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 50000                    # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -45,7 +45,8 @@ dt = 6000                    # [s] <float> real time difference between simulati
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [3600]              # [s] <float> real time differences between simulation iterations inside each intervall
+;ends =   [2458401]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [50000]              # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -55,7 +56,7 @@ dts =    [3600]              # [s] <float> real time differences between simulat
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # dt is proportional to the velocity of the objects in the animation.
                              # Because dt can change between intervalls, so can the animated velocity of objects in the video.
-;sim_flux_file = ../data/simulations/sim001.csv # <string> When this parameter is provided, the simulated flux will be saved.
+;sim_flux_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.csv # <string> When this parameter is provided, the simulated flux will be saved.
                              # The file has the same structure as the files containg measurered flux data which CurveSimulator can process:
                              # It is a CSV file with columns time, flux and flux_err.
 sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err will be added to the simulated flux.
@@ -72,7 +73,8 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt_start_end_locked.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
@@ -101,8 +103,8 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+;video_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxml.mp4  # <string> the resulting video is saved in this file
+frames = 1000                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -150,7 +152,7 @@ limb_darkening_parameter_type = q
 
 [TOI4504b]
 body_type = planet
-primary =   TOI-4504
+primary =   TOI4504
 color =     0.99, 0.01, 0.01
 mass =      10.4 * m_earth
 radius =    2.691 * r_earth
@@ -164,12 +166,12 @@ ma =        303.6
 
 [TOI4504d]
 body_type = planet
-primary =   TOI-4504
+primary =   TOI4504
 color =     0.01, 0.99, 0.01
 mass =      1.306938619229288 * m_jup,    1.2 * m_jup,      1.4 * m_jup,           1
 radius =    1.012 * r_jup,              #
 e =         0.10527976401695996,          0.08,             0.11,                  1
-i =         88.8,                       #
+i =         88.8,                         87,               89.5,                  1
 P =         41.16768686103386 * day,      41.1 * day,       41.25 * day,           1
 Omega =     4.9620750482336655,            0,               6,                     1
 omega =     87.12992034721043,            85,               89,                    1
@@ -178,13 +180,13 @@ ma =        329.9695998776485,           328,               330,                
 
 [TOI4504c]
 body_type = planet
-primary =   TOI-4504
+primary =   TOI4504
 color =     0.99, 0.99, 0.01
 mass =      3.5913902107546636 * m_jup,  3.3 * m_jup,       3.8 * m_jup,           1
 radius =    0.9897 * r_jup,             #
 e =         0.051523476358734575,        0.048,             0.058,                 1
-i =         89.69,                      #
+i =         89.69,                       89.0,              90.0,                  1
 P =         83.28376891641055 * day,     82.7 * day,        83.6 * day,            1
-Omega =     0.8,                        #
+Omega =     0.8,                         -3,                9,                     1
 omega =     296.08745527524496,          294,               310,                   1
 ma =        150.0142378614026,           135,               156,                   1
