--- a/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
+++ b/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
@@ -22,16 +22,16 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt50000.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dummy.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = X024               # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 50000                    # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 1e7                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -44,9 +44,9 @@ dt = 50000                    # [s] <float> real time difference between simulat
 ;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;ends =   [2458401]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [50000]              # [s] <float> real time differences between simulation iterations inside each intervall
+ends =   [2458401]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [23000]              # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -69,6 +69,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
+;lmfit = True                 # True for LMfit, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
@@ -83,14 +84,14 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 200                 # Number of mcmc chains
-burn_in = 3000                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 32                 # Number of mcmc chains
+burn_in = 1                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 30            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 200              # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 10              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -171,10 +172,10 @@ color =     0.01, 0.99, 0.01
 mass =      1.306938619229288 * m_jup,    1.2 * m_jup,      1.4 * m_jup,           1
 radius =    1.012 * r_jup,              #
 e =         0.10527976401695996,          0.08,             0.11,                  1
-i =         88.8,                         87,               89.5,                  1
+i =         88.8,                        # 87,               89.5,                  1
 P =         41.16768686103386 * day,      41.1 * day,       41.25 * day,           1
-Omega =     4.9620750482336655,            0,               6,                     1
-omega =     87.12992034721043,            85,               89,                    1
+Omega =     4.9620750482336655,          #  0,               6,                     1
+omega =     87.12992034721043,           # 85,               89,                    1
 ma =        329.9695998776485,           328,               330,                   1
 
 
@@ -185,8 +186,8 @@ color =     0.99, 0.99, 0.01
 mass =      3.5913902107546636 * m_jup,  3.3 * m_jup,       3.8 * m_jup,           1
 radius =    0.9897 * r_jup,             #
 e =         0.051523476358734575,        0.048,             0.058,                 1
-i =         89.69,                       89.0,              90.0,                  1
+i =         89.69,                      # 89.0,              90.0,                  1
 P =         83.28376891641055 * day,     82.7 * day,        83.6 * day,            1
 Omega =     0.8,                         -3,                9,                     1
-omega =     296.08745527524496,          294,               310,                   1
+omega =     296.08745527524496,         # 294,               310,                   1
 ma =        150.0142378614026,           135,               156,                   1
