--- a/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
+++ b/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
@@ -26,12 +26,12 @@ result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dummy.jso
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = X024               # You can use this comment for example as diagram title in your result plots
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 1e7                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 1e4                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -43,10 +43,11 @@ dt = 1e7                     # [s] <float> real time difference between simulati
 ;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
-starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458401]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;starts =   [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+starts = [2458728]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [23000]              # [s] <float> real time differences between simulation iterations inside each intervall
+ends =   [2458731]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [50000]              # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
