--- a/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
+++ b/results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl.ini
@@ -43,11 +43,11 @@ dt = 1e4                     # [s] <float> real time difference between simulati
 ;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
-;starts =   [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-starts = [2458728]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-ends =   [2458731]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [50000]              # [s] <float> real time differences between simulation iterations inside each intervall
+starts =   [2458400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;starts = [2458728]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;ends =   [2458731]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [20000]              # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
